<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.JoinFragment"
    android:background="@color/blue_2">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cookierun_regular"
        android:text="@string/main"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

    </TextView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <View
        android:id="@+id/content_background"
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/content_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="145dp"
        android:gravity="center"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/cookierun_regular">

    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp">

    </EditText>

    <EditText
        android:id="@+id/pn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="pn"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/pn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="270dp">

    </EditText>

    <EditText
        android:id="@+id/id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <Button
        android:id="@+id/btn_overlap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/beige_2"
        android:text="@string/overlap"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="210dp"
        android:textSize="14sp"
        android:fontFamily="@font/cookierun_regular"
        >

    </Button>

    <EditText
        android:id="@+id/pw"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="pw"
        android:hint="@string/pw"
        android:fontFamily="@font/cookierun_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="410dp">

    </EditText>

    <EditText
        android:id="@+id/pwch"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="pwch"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/pwch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="480dp">

    </EditText>

    <Button
        android:id="@+id/join"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/beige_2"
        android:text="@string/join"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="570dp"
        android:fontFamily="@font/cookierun_regular"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>